[project]
name = "pip-package-default"
version = "0.1.0"
description = ""
authors = [
    {name = "MafiaCoconut",email = "alex.kach.2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{ include = "pip_package_default", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
